test/classes/forwarding/outside-of-class.good
outside-of-class.chpl:1: In module 'M':
outside-of-class.chpl:3: error: forwarding declarations are only allowed in records and classes
